infrastructure/k8s/overlays/test/ingress.patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: material-list-ingress
spec:
  tls:
  - hosts:
    - test.materiallist.dandigbib.org
    secretName: test-material-list-cert-api
  rules:
    - host: test.materiallist.dandigbib.org
      http:
        paths:
        - path: /
          backend:
            serviceName: material-list
            servicePort: http
